fix(send-button): button doesn't move  the layout behind now when clicked

--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -733,6 +733,7 @@ input[type="checkbox"]:checked + svg{
     border-radius: 25px;
     border: none; 
     cursor: pointer;
+     border: 1px solid white;
 }
 .btn-send:active {
    
